--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,10 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   flutter_riverpod: ^0.13.0
+  geolocator: ^7.0.1
   google_fonts: ^2.0.0
   http: ^0.13.0
+  velocity_x: ^1.4.1
 
 dev_dependencies:
   flutter_test:
