--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   http: ^0.13.0
   velocity_x: ^1.4.1
   shimmer: ^1.1.2
+  cached_network_image: ^3.0.0
 
 dev_dependencies:
   flutter_test:
