--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   velocity_x: ^1.4.1
   shimmer: ^1.1.2
   cached_network_image: ^3.0.0
+  alice: ^0.2.0
 
 dev_dependencies:
   flutter_test:
