--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,13 @@ dependencies:
   flutter_riverpod: ^0.13.0
   geolocator: ^7.0.1
   google_fonts: ^2.0.0
-  velocity_x: ^1.4.1
+  velocity_x: ^3.0.0
   shimmer: ^1.1.2
   cached_network_image: ^3.0.0
   alice: ^0.2.0
+  firebase_core: "^1.1.0"
+  firebase_auth: "^1.1.2"
+  lottie: ^1.0.1
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +51,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/json/dummypics.json
+    - assets/json/LoginLottie.json
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
