--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,16 @@ dependencies:
   firebase_core: "^1.1.0"
   firebase_auth: "^1.1.2"
   lottie: ^1.0.1
+  flutter_launcher_icons: ^0.9.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: assets/icon.png
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
