--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^4.0.0
   flutter_riverpod: ^0.13.0
-  geolocator: ^7.0.1
+  geolocator: ^7.0.3
   google_fonts: ^2.0.0
   velocity_x: ^3.0.0
   shimmer: ^1.1.2
@@ -36,6 +36,10 @@ dependencies:
   firebase_auth: "^1.1.2"
   lottie: ^1.0.1
   flutter_launcher_icons: ^0.9.0
+  flutter_advanced_drawer: ^1.1.0
+  firebase_storage: "^8.0.5"
+  image_picker: ^0.7.5+2
+  
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +62,7 @@ flutter:
   assets:
     - assets/json/dummypics.json
     - assets/json/LoginLottie.json
+    - assets/defaultProfileImage.jpg
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
