--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_advanced_drawer: ^1.1.0
   firebase_storage: "^8.0.5"
   image_picker: ^0.7.5+2
+  flutter_native_splash: ^1.1.8+4
   
 
 dev_dependencies:
@@ -49,6 +50,10 @@ flutter_icons:
   android: "launcher_icon"
   ios: true
   image_path: assets/icon.png
+
+flutter_native_splash:
+  image: assets/icon.png
+  color: "#ffc260"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
