--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   dio: ^4.0.0
-  flutter_riverpod: ^0.13.0
+  provider: ^5.0.0
   geolocator: ^7.0.3
   google_fonts: ^2.0.0
   velocity_x: ^3.0.0
