--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ flutter:
   assets:
     - assets/json/dummypics.json
     - assets/json/LoginLottie.json
+    - assets/json/foodList.json
     - assets/defaultProfileImage.jpg
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
