Added Add to Cart

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,8 +66,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/json/dummypics.json
-    - assets/json/LoginLottie.json
     - assets/json/foodList.json
+    - assets/json/LoginLottie.json
+    - assets/json/waiting.json
+    - assets/json/waiting-pigeon.json
+    - assets/json/confirm-order.json
+    - assets/json/order-is-confirmed.json
     - assets/defaultProfileImage.jpg
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
